[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "pinsearch-sdk"
version = "0.1.4"
authors = [{name = "Amit Bhagat", email = "amitbhagat621@gmail.com"}]
description = "search Indian postal information by PIN code, state, or district"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ddddocr>=1.6.1",
    "requests>=2.34.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pinsearch_sdk = ["pincode_data.json"]
